--- a/src/AutoClicker/View/MainWindow.xaml
+++ b/src/AutoClicker/View/MainWindow.xaml
@@ -102,7 +102,9 @@
             <GridSplitter Grid.Row="0" Grid.Column="1" Width="5" VerticalAlignment="Stretch"
                           HorizontalAlignment="Center" />
 
-            <Grid Grid.Column="2" />
+            <Grid  Grid.Column="2" >
+                <ContentControl Content="{Binding CurrentControl}" Margin="10" />
+            </Grid>
 
         </Grid>
 
